Changelog for zest.releaser
===========================

3.5 (unreleased)
----------------

- Nothing changed yet.


3.4 (2010-02-02)
----------------

- Always build zip files if using python2.4 [do3cc]

- bugfix: added 'spreaded_internal' property to BaseVersionControl
  objects, so filefind() does not exclude a directory just because
  there is no '.git' folder in it. It still excludes directory where
  there is no '.svn' folder in SVN repositories. [vincent]


3.3 (2009-12-29)
----------------

- Fixed test failures when run on a computer with a new style pypi
  config.  We now always use an old style config when running the
  tests.
  [maurits]

- Fixed the release command for hg 1.1 (e.g. Ubuntu 9.04).
  [maurits]


3.2 (2009-12-22)
----------------

- Replaced commands.getoutput() with a system() function grabbed from buildout
  on suggestion by Adam Groszer.  Goal: make zest.releaser work also on
  windows.

- Improved entry point documentation.

- Added launchpad bugtracker at https://bugs.launchpad.net/zest.releaser (and
  pointing at that in the documentation).


3.1 (2009-11-27)
----------------

- Added documentation for entry points.  [reinout]


3.0 (2009-11-27)
----------------

- Added support for extension by means of entry points.  There is no
  documentation that advertises it yet as I want to treat it as experimental
  till I've used it a few times.  [reinout]


2.12 (2009-11-26)
-----------------

- Fixed mercurial sdist creation.  [reinout]

- A missing history file does not result anymore in a keyerror in prerelease.
  [reinout]

- Added lots of test output normalization so that errors aren't hidden by
  the large number of ``...`` in the doctests.  [reinout]


2.11 (2009-11-25)
-----------------

- Added /tag besides /tags for subversion [gotcha]

- Fixed tests failures. [gotcha]


2.10 (2009-10-22)
-----------------

- Added support for git.  [reinout]

- Lots of internal refactoring and small fixes.  [reinout]
